--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Dokdo&display=swap');
+
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
