--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,4 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Dokdo&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Dokdo&display=swap");
 
 @tailwind base;
 @tailwind components;
